--- a/_config.yml
+++ b/_config.yml
@@ -36,15 +36,15 @@ menu:
 
 # Owner/author information
 owner:
-  name:           Your name
+  name:            김정민(Jung Min Kim)
   site:           http://aronbordin.com
   avatar:         images/avatar.jpg
   bio:            "Your bio goes here. It shouldn't be super long but a good two sentences or two should suffice."
-  email:          you@email.com
+  email:          wjdals0304@gmail.com
   # Twitter nick for use in Twitter cards and follow button.
-  twitter: aron_bordin # if no twitter in this config, the twitter follow button will be removed
+  # if no twitter in this config, the twitter follow button will be removed
   # GitHub nick for use in follow button in author block.
-  github: aron-bordin
+  github: wjdals0304
 
 # Twitter account associated with the site if different from owner/author twitter account.
 # Used in Twitter cards.
