--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ menu:
   - title: 'Categories'
     url: '/categories'
     type: 'categories'
-  - title: 'Favorites'
+  - title: 'about'
     url: '#'
     submenu:
       - title: 'Code Highlighter'
@@ -69,8 +69,8 @@ google_verify:
 bing_verify:
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
-timezone:    America/New_York
-locale:      en_US
+timezone:    Asia/Seoul
+locale:      kr
 future:      true
 highlighter: rouge
 markdown:    kramdown
