--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ menu:
   - title: 'Categories'
     url: '/categories'
     type: 'categories'
-  - title: 'Favorites'
+  - title: 'About'
     url: '#'
     submenu:
       - title: 'Code Highlighter'
