--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title:            Blog Title
-description:      Describe your website here.
+title:            IronMan
+description:      sofeware engineer
 
 # put your disqus here
 disqus_shortname:
