--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title:  IronMan
 description:      sofeware engineer
 
 # put your disqus here
-disqus_shortname: jm
+disqus_shortname: ironman-jm
 reading_time:     true # if true, shows the estimated reading time for a post
 words_per_minute: 200
 logo:             images/logo.png # logo visible in the topbar
